notebooks on datacollection

--- a/notebooks/Data collection/Jenna_2k_tweets.ipynb
+++ b/notebooks/Data collection/Jenna_2k_tweets.ipynb
@@ -5053,6 +5053,8 @@
     }
    ],
    "source": [
+    "%%time\n",
+    "\n",
     "# Using TwitterSearchScraper to scrape data and append tweets to list\n",
     "for i,tweet in enumerate(sntwitter.TwitterSearchScraper(f'{keywords} from:TheSun OR from:DailyMailUK OR from:MailOnline OR from:Daily_Express').get_items()):\n",
     "    if i>2000:\n",
