Added commented from Humberto

--- a/notebooks/Output 2 - Minority group /RoBERTa_light.ipynb
+++ b/notebooks/Output 2 - Minority group /RoBERTa_light.ipynb
@@ -143,6 +143,7 @@
     "from transformers import TFAutoModelForSequenceClassification\n",
     "from transformers import AutoTokenizer\n",
     "import numpy as np\n",
+    "# softmax for multi-classification scores\n",
     "from scipy.special import softmax\n",
     "import csv\n",
     "import urllib.request\n",
@@ -438,7 +439,10 @@
    ],
    "source": [
     "# model 2 is for emotions: joy, anger, optimism, sadness\n",
+    "# Hugging face documentation here: https://huggingface.co/cardiffnlp/twitter-roberta-base-emotion\n",
     "# model 6 is for sentiment: positive, negative, neutral\n",
+    "# Hugging face documentation here: https://huggingface.co/cardiffnlp/twitter-roberta-base-sentiment-latest\n",
+    "\n",
     "\n",
     "# Pretrained model path from hugging face\n",
     "MODEL2 = \"cardiffnlp/twitter-roberta-base-emotion\"\n",
@@ -449,6 +453,7 @@
     "model2 = AutoModelForSequenceClassification.from_pretrained(MODEL2)\n",
     "model6 = AutoModelForSequenceClassification.from_pretrained(MODEL6)\n",
     "\n",
+    "# Tokeniser turns the labels into vectors\n",
     "tokenizer2 = AutoTokenizer.from_pretrained(MODEL2)\n",
     "tokenizer6 = AutoTokenizer.from_pretrained(MODEL6)"
    ]
@@ -463,12 +468,15 @@
    },
    "outputs": [],
    "source": [
+    "# Precoded from hugging face - returns list of labels to be used in the models i.e. joy, anger, optimism, sadness. \n",
+    "\n",
     "mapping_link2 = \"https://raw.githubusercontent.com/cardiffnlp/tweeteval/main/datasets/emotion/mapping.txt\"\n",
     "with urllib.request.urlopen(mapping_link2) as f:\n",
     "    html = f.read().decode('utf-8').split(\"\\n\")\n",
     "    csvreader = csv.reader(html, delimiter='\\t')\n",
     "labels2 = [row[1] for row in csvreader if len(row) > 1]\n",
     "\n",
+    "# Precoded from hugging face - returns list of labels to be used in the models i.e. positive, negative, neutral\n",
     "mapping_link6 = \"https://raw.githubusercontent.com/cardiffnlp/tweeteval/main/datasets/sentiment/mapping.txt\"\n",
     "with urllib.request.urlopen(mapping_link6) as f:\n",
     "    html = f.read().decode('utf-8').split(\"\\n\")\n",
@@ -495,6 +503,9 @@
    },
    "outputs": [],
    "source": [
+    "# Precoded with hugging face - turns tweets into a string of words without links ('\\nhttp' and 'http') and users \n",
+    "# and returned as preprocessed_tweets, which is \n",
+    "# a list of list of words\n",
     "def preprocess(df):\n",
     "    tweets = [str(tweet) for tweet in df[\"Text\"]]\n",
     "    preprocessed_tweets = []\n",
@@ -502,6 +513,7 @@
     "    for tweet in tweets:\n",
     "        new_text=[]\n",
     "        \n",
+    "        # Amend '\\nhttp' into 'http'\n",
     "        for t in tweet.split(\" \"):\n",
     "            t = '@user' if t.startswith('@') and len(t) > 1 else t\n",
     "            t = 'http' if t.startswith('http') else t\n",
@@ -509,13 +521,15 @@
     "            new_text.append(t)\n",
     "            \n",
     "        preprocessed_tweets.append(\" \".join(new_text))\n",
-    "\n",
+    "    # Could be appended to dofi but not yet\n",
     "    return preprocessed_tweets\n",
     "\n",
+    "# Running model here\n",
     "def method2_processing(df, prep_df, append=False):\n",
     "    score_list = []\n",
     "    dofi = df\n",
     "    \n",
+    "    # Runnig the model on each tweets, which is putting a score against the tweet and outputs a list\n",
     "    for text in prep_df:\n",
     "        encoded_input = tokenizer2(text, return_tensors='pt')\n",
     "        output = model2(**encoded_input)\n",
@@ -523,16 +537,20 @@
     "        scores = softmax(scores)\n",
     "        score_list.append(scores)\n",
     "\n",
+    "    # Precoded with hugging face and put the scores into a ranking\n",
     "    ranking = np.argsort(score_list[0])\n",
     "    ranking = ranking[::-1]\n",
     "    results = {\"anger\": [], \"sadness\": [], \"optimism\": [], \"joy\": []}\n",
     "\n",
+    "    # Takes the labels and scores and puts it inside of results dictionary\n",
     "    for count, tweet_score in enumerate(score_list):\n",
     "        for i in range(tweet_score.shape[0]):\n",
     "            l = labels2[ranking[i]]\n",
     "            s = tweet_score[ranking[i]]\n",
+    "            # Round scores at 4 decimal palces\n",
     "            results[f\"{l}\"].append(np.round(float(s), 4))\n",
-    "\n",
+    "    \n",
+    "    # Converts dictionary results into the df with labels and the original tweets\n",
     "    if append == True:\n",
     "        \n",
     "        dofi[\"joy\"] = results[\"joy\"]\n",
@@ -544,6 +562,7 @@
     "    \n",
     "    return results                                 \n",
     "\n",
+    "# Same process as above but different labels\n",
     "def method6_processing(df, prep_df, append=False):\n",
     "    score_list = []\n",
     "    dofi = df\n",
@@ -575,14 +594,19 @@
     "    \n",
     "    return results \n",
     "\n",
+    "# Running the precess steps for models 2 and 6 together and then dropping duplicates\n",
     "def tweet_RoBERTa_light_processing(raw_df):\n",
     "    drop_df = raw_df.drop_duplicates()\n",
     "    prep_df = preprocess(drop_df)\n",
     "    \n",
+    "    #m2 output is dataframe \n",
     "    m2 = method2_processing(drop_df, prep_df, True)\n",
+    "    #add m6 processing on top on m2 output\n",
     "    m6 = method6_processing(m2, prep_df, True)\n",
-    "\n",
+    "    \n",
+    "    # The datetime from the tweets is converted to the date time format\n",
     "    dates = pd.to_datetime(m6[\"Datetime\"]).dt.date\n",
+    "    # Replaces the original tweet with the preprocessed tweet\n",
     "    m6[\"only_date\"] = dates\n",
     "    m6[\"Text\"] = prep_df\n",
     "\n",
@@ -874,6 +898,7 @@
     }
    ],
    "source": [
+    "# Origin dataset\n",
     "data = pd.read_csv(\"/content/drive/MyDrive/data/Tweets by minority group/Roberta_Muslim.csv\")\n",
     "tweets_df = pd.DataFrame(data)\n",
     "tweets_df"
@@ -933,6 +958,7 @@
     }
    ],
    "source": [
+    "# This is the processed dataframe from the model\n",
     "processed_df = tweet_RoBERTa_light_processing(tweets_df)\n",
     "processed_df.head(5)"
    ]
@@ -973,6 +999,7 @@
    },
    "outputs": [],
    "source": [
+    "# Downloading to csv\n",
     "processed_df.to_csv('muslim_roberta_processed.csv')"
    ]
   }
